@@ -49,6 +49,9 @@ IN DEVELOPMENT
       access.
       (Robert Collins, Andrew Bennetts)
 
+    * Mark bzrlib.tests as providing assertFOO helper functions by adding
+      a __unittest global attribute. (Robert Collins, Andrew Bennetts,
+      Martin Pool, Jonathan Lange)
 
 bzr 0.15 (not finalised)
 
